[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/menus/replay/ReplayFileMenu.gd" type="Script" id=1]
[ext_resource path="res://game/assets/monogram_extended.ttf" type="FontFile" id=6]
[ext_resource path="res://game/assets/shaders/EarthBoundV1.tres" type="Material" id=8]
[ext_resource path="res://game/assets/sprites/BGArt/Earthbound1.png" type="Texture2D" id=9]

[sub_resource type="FontFile" id=1]
size = 42
font_data = ExtResource( 6 )

[node name="ReplayFileMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -812.0
offset_top = 17.0
offset_right = -341.0
offset_bottom = 147.0
scale = Vector2( 2, 2 )
theme_override_fonts/font = SubResource( 1 )
text = "Open a replay file: "
autowrap = true

[node name="ErrorLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -892.0
offset_top = 989.0
offset_right = 108.0
offset_bottom = 1119.0
scale = Vector2( 1.60537, 0.728059 )
theme_override_fonts/font = SubResource( 1 )
autowrap = true

[node name="GridContainer" type="ScrollContainer" parent="CanvasLayer"]
offset_left = 155.0
offset_top = 98.0
offset_right = 955.0
offset_bottom = 498.0
scale = Vector2( 2, 2 )
follow_focus = true

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/GridContainer"]
offset_right = 95.0
offset_bottom = 20.0
columns = 3

[node name="DeleteModeButton" type="Button" parent="CanvasLayer/GridContainer/GridContainer"]
offset_right = 95.0
offset_bottom = 20.0
toggle_mode = true
text = "Delete Mode"

[node name="Earthbound2" type="Sprite2D" parent="."]
material = ExtResource( 8 )
position = Vector2( 961, 539 )
texture = ExtResource( 9 )

[connection signal="pressed" from="CanvasLayer/GridContainer/GridContainer/DeleteModeButton" to="." method="_on_DeleteModeButton_pressed"]
